--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ version: 1.0.0+1
 environment:
   sdk: ^3.5.4
 
+
+
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
 # consider running `flutter pub upgrade --major-versions`. Alternatively,
@@ -31,6 +33,8 @@ dependencies:
   intl: ^0.18.0
   flutter:
     sdk: flutter
+
+  uuid: ^3.0.6
 
 
 
